--- a/styles/icons.min-1.css
+++ b/styles/icons.min-1.css
@@ -5,6 +5,7 @@
     font-weight: 400;
     font-style: normal
 }
+
 .mdi-set,
 .mdi:before {
     display: inline-block;
@@ -20317,7 +20318,12 @@
     }
 }
 
-
+/* @font-face {
+    font-family: remixicon;
+    src: url(./fonts/remixicon.eot);
+    src: url(./fonts/remixicon.eot) format("embedded-opentype"), url(./fonts/remixicon.woff2) format("woff2"), url(./fonts/remixicon.woff) format("woff"), url(./fonts/remixicon.ttf) format("truetype"), url(./fonts/remixicon.svg) format("svg");
+    font-display: swap
+} */
 
 [class*=" ri-"],
 [class^=ri-] {
@@ -28616,6 +28622,13 @@
     content: "\f207"
 }
 
+@font-face {
+    font-family: boxicons;
+    font-weight: 400;
+    font-style: normal;
+    src: url(./fonts/boxicons-1.eot);
+    src: url(./fonts/boxicons-1.eot) format("embedded-opentype"), url(./fonts/boxicons-1.woff2) format("woff2"), url(./fonts/boxicons-1.woff) format("woff"), url(./fonts/boxicons-1.ttf) format("truetype"), url(./fonts/boxicons.svg) format("svg")
+}
 
 .bx {
     font-family: boxicons !important;
